--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The premier BUSD accrual protocol for everyone in DeFi."
+      content="BUSD, BNB, HODLZILLA TOKEN MINER"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BUSD AUTOMINE</title>
+    <title>HODLZILLA MINER</title>
+    <style>
+      iframe {
+        z-index: -100 !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
